# Tiny-LLM-Inference

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  main.cpp
include/core/: allocator.h  context.h  execution_context.h  kv_cache.h  tensor.h
include/models/: llama_layer.h  mini_llama.h
include/operators/: ops.h
include/utils/: cuda_compat.h  cuda_utils.h
kernels/: vector_add.cu
src/core/: allocator.cpp  execution_context.cpp  tensor.cpp
src/models/: llama_layer.cpp
src/operators/: ops.cpp
tests/: CMakeLists.txt  tests_dummy.cpp
